--- a/gateway.yml
+++ b/gateway.yml
@@ -6,7 +6,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+      defaultZone: http://localhost:${eureka.instance.port}/eureka/
     server:
       wait-time-in-ms-when-sync-empty: 3000 
 
