--- a/service-discovery.yml
+++ b/service-discovery.yml
@@ -8,6 +8,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: false
     serviceUrl: 
-      defaultZone: http://localhost:${server.port}/eureka/
+      defaultZone: http://localhost:${eureka.instance.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 3000
